--- a/finding_donors.html
+++ b/finding_donors.html
@@ -13168,7 +13168,7 @@ Look at the graph at the bottom left from the cell above(the visualization creat
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>Answer: </strong></p>
 <p>Logistic regression is generally used when what you are perdicting is binary or multi-class. That means it can take only two possible values such as “Yes or No”, “Default or No Default”, “Living or Dead”, “Responder or Non Responder”, “Yes or No” and three possible values <a href="https://www.quora.com/What-is-logistic-regression">(source)</a>. A set of data called the training dataset is used to train the model and instead of a line to seperate the data a log function is used.</p>
-<p>Logistic Regression uses the logistic function to find a model that fits with the data points. The function gives an 'S' shaped curve to model the data. so the test dataset is fixed into the curve to see where it falls.</p>
+<p>Logistic Regression uses the logistic function to find a model that fits with the data points. The function gives an 'S' shaped curve to model the data, the curve is restricted between 0 and 1. What you want to predict the result (yes "1" or no "0" e.t.c.), is then placed along the curve to see where it falls. If the probabilty of the prediction is greater than 0.5 then 1 in output as the result. If it is less than 0.5 then zero is given out</p>
 
 </div>
 </div>
